Fix for PDFLaTeX

--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -1320,7 +1320,7 @@ numbers here are totally fictitious when it comes to the actual files.
 \newcommand*{\hashtag}[1]{%
   \newcommand*{\inserthashtag}{\href{https://twitter.com/hashtag/#1}{\##1}}%
 }
-\newcommand{\RDAFormatHandle}[1]{ | \href{https://twitter.com/#1}{@#1}}
+\newcommand{\RDAFormatHandle}[1]{ \textbar\ \href{https://twitter.com/#1}{@#1}}
 \newcommand{\handles}[1]{\def\handlecsv{{#1}}}
 \handles{rda\_europe, RDA\_US}
 %    \end{macrocode}
