Fix font colours

--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -1618,11 +1618,11 @@ numbers here are totally fictitious when it comes to the actual files.
         set vsize={0pt}{0pt}%
       }%
         \linespread{0.75}\usebeamerfont{frametitle}%
-        \usebeamercolor{frametitle}\color{fg}%
-        \rdaGroupName\par
+        \usebeamercolor{frametitle}%
+        \textcolor{fg}{\rdaGroupName}\par
         \ifdefvoid{\rdaGroupType}{}{%
           \usebeamerfont{framesubtitle}%
-          \rdaGroupType\par
+          \textcolor{fg}{\rdaGroupType}\par
         }%
       \end{adjustbox}%
     }\quad
@@ -1906,6 +1906,7 @@ numbers here are totally fictitious when it comes to the actual files.
 % it on the title slide, for the \pkg{beamer} title graphic.
 %
 %    \begin{macrocode}
+    \hypersetup{urlcolor=fg}%
     \makebox[0pt][l]{%
       \iftoggle{titlepage}{%
         \usebeamercolor[fg]{titlegraphic}\inserttitlegraphic
@@ -1972,6 +1973,7 @@ numbers here are totally fictitious when it comes to the actual files.
   }%
   \begin{beamercolorbox}[ht=3.25mm,dp=1.75mm]{footline}
     \usebeamerfont{footline}%
+    \hypersetup{urlcolor=fg}%
     \hspace*{\beamer@leftmargin}%
 %    \end{macrocode}
 %
@@ -2024,6 +2026,7 @@ numbers here are totally fictitious when it comes to the actual files.
 \setbeamertemplate{footline}{%
   \begin{beamercolorbox}[ht=4.35mm,dp=2.22mm]{footline}
     \usebeamerfont{footline}%
+    \hypersetup{urlcolor=fg}%
     \hspace*{\beamer@leftmargin}%
 %    \end{macrocode}
 %
